# sdl2-example

./: CMakeLists.txt  README.md
data/: 44100_16bit_2ch.pcm
docs/: 源码依赖SDL2.md
src/: main.cc  play_pcm_audio_by_pull.cc  play_pcm_audio_by_push.cc
